--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,19 +1,29 @@
 .header {
   display: block;
-  min-height: 64px;
-  padding: 2em 0;
-  text-align: center;
-  letter-spacing: -0.02em;
+  margin: 0 240px;
+  padding: 48px 0 0;
+}
+
+.header h1 {
+  margin: 0;
+  padding: 0;
+  font-family: 'Shadows Into Light', 'Noto Sans', sans-serif;
+  font-weight: normal;
 }
 
 .header ul {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
 .header ul li {
   display: inline-block;
-  padding: 0 10px;
+  margin: 0 16px 0 0;
+}
+
+.header ul li:last-child {
+  margin-right: 0;
 }
 
 .header :global(a) {
@@ -22,12 +32,12 @@
 }
 
 .header :global(a.active) {
-  color: #0070f3;
+  color: #606060;
   font-weight: 600;
 }
 
 @media (max-width: 600px) {
   .header {
-    padding: .5em 0 2em;
+    padding: 0.5em 0 2em;
   }
 }
