--- a/src/styles/shared.module.css
+++ b/src/styles/shared.module.css
@@ -1,3 +1,7 @@
+.layout {
+  margin: 0 240px;
+}
+
 .layout img {
   margin: auto;
   max-width: 98%;
@@ -7,5 +11,5 @@
 
 .layout h1,
 .layout h2 {
-  text-align: center;
+  font-weight: normal;
 }
