--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -93,8 +93,8 @@
 .post :global(video),
 .post :global(img),
 .post :global(.asset-wrapper) {
-  margin: 2rem auto;
-  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   max-width: 100%;
   display: block;
 }
@@ -102,6 +102,40 @@
 .post :global(.tweet) {
   margin: 2rem auto;
   text-align: center;
+}
+
+.post :global(.bookmark) {
+  border: 1px solid #37352f29;
+  border-radius: 3px;
+}
+
+.post :global(.bookmark > a) {
+  display: block;
+  padding: 8px 16px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-color: rgba(255, 255, 255, 0.8);
+  background-blend-mode: lighten;
+}
+
+.post :global(.bookmarkDescription > p) {
+  margin: 4px 0px;
+  font-size: 12px;
+  color: #909090;
+}
+
+.post :global(.bookmarkDescription .linkText) {
+  display: flex;
+  flex-direction: row;
+  font-size: 12px;
+}
+.post :global(.bookmarkDescription .linkText > img) {
+  width: 16px;
+  height: 16px;
+  box-shadow: none !important;
+  margin: 0;
+  margin-right: 4px;
 }
 
 .post :global(.callout) {
